# baggianalysis

./: .cproject  .gitignore  .project  .pydevproject  CHANGELOG  CMakeLists.txt  README.md  TODO  TODO.md  contributing.md  converters.html  desiderata.md  genindex.html  index.html  install.html  notes.md  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  time  time_no_bindings  traj.html  utils.html
.github/workflows/: build_and_update_docs.yml  build_docs.yml  build_package.yml  build_wheels.yml
_sources/: converters.md.txt  index.md.txt  install.md.txt  utils.md.txt
_sources/core/: core.md.txt  neighbours.md.txt  observables.md.txt  parsers.md.txt  particles.md.txt  topology.md.txt  trajectories.md.txt  utils.md.txt
_sources/extending/: topology.md.txt
_static/: documentation_options.js
core/: core.html  exporters.html  filters.html  neighbours.html  observables.html  parsers.html  particles.html  topology.html  trajectories.html  utils.html
docs/: Makefile  conf.py  converters.md  index.md  requirements.txt  traj.md  utils.md
docs/core/: core.md  exporters.md  filters.md  neighbours.md  observables.md  parsers.md  particles.md  utils.md
docs/extending/: parser.md
examples/LAMMPS/: analyse.py
examples/oxDNA/: patch_to_cogli.py  sq.py
exec/: CMakeLists.txt  bop.py  main.cpp  msd.cpp  poresize.py  test_feature.cpp  test_feature.py
extending/: parser.html  topology.html
legacy/: pybind11_2.4.3.tgz
lib/: CMakeLists.txt  Particles.cpp  Particles.h  System.cpp  System.h  Topology.cpp  Topology.h  Trajectory.cpp  Trajectory.h  defs.h  python_bindings.cpp  python_defs.h
lib/exporters/: BaseExporter.cpp  BaseExporter.h  Cogli1Exporter.cpp  Cogli1Exporter.h  GenericOxDNAExporter.cpp  GenericOxDNAExporter.h  LAMMPSDataFileExporter.cpp  LAMMPSDataFileExporter.h
lib/filters/: BaseFilter.cpp  BaseFilter.h  FilterByFunction.cpp  FilterByFunction.h  FilterById.cpp  FilterById.h  FilterByReducingToCOM.cpp  FilterByReducingToCOM.h  FilterByType.cpp  FilterByType.h  FixParticlePath.cpp  FixParticlePath.h  MapParticles.cpp  MapParticles.h  MolecularCOMs.cpp  MolecularCOMs.h  SubtractCOM.cpp  SubtractCOM.h
lib/neighbour_finders/: CutoffFinder.cpp  CutoffFinder.h  FixedNumberFinder.cpp  FixedNumberFinder.h  NNFinder.cpp  NNFinder.h  NeighbourFinder.cpp  NeighbourFinder.h  SANNFinder.cpp  SANNFinder.h
lib/observables/: BondOrderParameters.cpp  BondOrderParameters.h  ClusterDistribution.cpp  ClusterDistribution.h  ClusterList.cpp  ClusterList.h  CollectiveISF.cpp  CollectiveISF.h  ConvexHull.cpp  ConvexHull.h  FormFactor.cpp  FormFactor.h  GyrationRadius.cpp  GyrationRadius.h  MSD.cpp  MSD.h  ParticleAutocorrelation.cpp  ParticleAutocorrelation.h  PoreSize.cpp  PoreSize.h  RDF.cpp  RDF.h  SelfISF.cpp  SelfISF.h  StructureFactor.cpp  StructureFactor.h
lib/observables/interfaces/: SystemObservable.h  TrajectoryObservable.h
lib/parsers/: BaseParser.cpp  BaseParser.h  GenericOxDNAParser.cpp  GenericOxDNAParser.h  GroParser.cpp  GroParser.h  LAMMPSDataFileParser.cpp  LAMMPSDataFileParser.h  LAMMPSDumpParser.cpp  LAMMPSDumpParser.h  LJKAParser.cpp  LJKAParser.h  OxDNAParser.cpp  OxDNAParser.h  PatchyParticlesParser.cpp  PatchyParticlesParser.h
lib/parsers/oxDNA_topology_parsers/: DNA.cpp  DNA.h  Default.cpp  Default.h  DetailedPolymer.cpp  DetailedPolymer.h  NoTopology.cpp  NoTopology.h  TSP.cpp  TSP.h
lib/particles/: Particle.cpp  Particle.h  ParticleSet.cpp  ParticleSet.h  Particles.h
lib/python/: __init__.py  __version__.py  bindings.cpp  converters.py  make_install_setup.py  python_bindings.cpp  python_glm.h  setup.py  utils.py
lib/topology/: Topology.cpp  Topology.h  TopologyParsers.cpp  TopologyParsers.h
lib/trajectories/: BaseTrajectory.cpp  BaseTrajectory.h  FullTrajectory.cpp  FullTrajectory.h  LazyTrajectory.cpp  LazyTrajectory.h
lib/utils/: CellLists.cpp  CellLists.h  Logger.cpp  Logger.h  Random.cpp  Random.h  WaveVectorList.cpp  WaveVectorList.h  clusters.cpp  clusters.h  filesystem.cpp  filesystem.h  math.cpp  math.h  strings.cpp  strings.h
src/: System.cpp  System.h  bindings.cpp  defs.h  python_defs.h  python_glm.h
src/baggianalysis/: __init__.py  traj.py
src/exporters/: BaseExporter.cpp  BaseExporter.h  Cogli1Exporter.h  GenericOxDNAExporter.cpp  LAMMPSDataFileExporter.h
src/filters/: BaseFilter.cpp  BaseFilter.h  FilterByFunction.cpp  FilterById.cpp  FilterById.h  FilterByType.cpp  FilterByType.h  FixParticlePath.cpp  FixParticlePath.h  MapParticles.h  MolecularCOMs.cpp  MolecularCOMs.h  SubtractCOM.cpp  SubtractCOM.h
src/neighbour_finders/: CutoffFinder.h  NeighbourFinder.cpp  NeighbourFinder.h  SANNFinder.cpp
src/observables/: BondOrderParameters.cpp  BondOrderParameters.h  CollectiveISF.h  ConvexHull.cpp  ConvexHull.h  FormFactor.cpp  FormFactor.h  GyrationRadius.cpp  GyrationRadius.h  ParticleAutocorrelation.cpp  ParticleAutocorrelation.h  PoreSize.cpp  RDF.h  SelfISF.h  StructureFactor.cpp
src/observables/interfaces/: SystemObservable.h  TrajectoryObservable.h
src/parsers/: BaseParser.cpp  BaseParser.h  GroParser.cpp  GroParser.h  LAMMPSDataFileParser.cpp  LAMMPSDataFileParser.h  LAMMPSDumpParser.h  LJKAParser.h  OxDNAParser.cpp  OxDNAParser.h  PDBParser.cpp  PDBParser.h  PatchyParticlesParser.cpp  PatchyParticlesParser.h
src/parsers/oxDNA_topology_parsers/: Default.cpp  Default.h  DetailedPolymer.cpp  NoTopology.h  TSP.cpp  TSP.h
src/particles/: Particle.cpp  Particle.h  ParticleSet.cpp  ParticleSet.h
src/topology/: Topology.cpp  Topology.h
src/trajectories/: BaseTrajectory.cpp  BaseTrajectory.h  FullTrajectory.cpp  FullTrajectory.h  LazyTrajectory.cpp
src/utils/: CellLists.cpp  CellLists.h  Random.cpp  Random.h  filesystem.h  math.cpp  math.h  natural_sort.h
tests/: TestSuite.py  test_list_file.txt
tests/LAMMPS/: add_particles_to_network_chains.py  add_test_list.txt
tests/LAMMPS/topology/: add_particles_to_network_chains.py
tests/oxDNA/spheres/: analyse.py  configuration.mgl  configuration_correct.mgl  csd.py  csd_test_list.txt  spheres_test_list.txt
(+2 files in other folders)
